--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 h1 {
     letter-spacing: 1px;
     margin: 0;
+    text-align: center;
 }
   
 h3 {
@@ -41,6 +42,7 @@ h3 {
 h4 {
     margin: 0;
     text-transform: uppercase;
+    text-align: center;
 }
   
 .inc-exp-container {
